# jupyter-agent

./: .gitignore  README.md
data/: README.md  main.py  pyproject.toml
data/pipelines/: convert_to_chatml_format.py  dedup.py  edu_scoring.py  extract_packages_and_files.py  generate_qa.py  generate_traces.py  kaggle_data_mapping.py  kaggle_loader.py
data/pipelines/add_markdown_to_notebook/: add_markdown_to_notebook.py  jupyter_to_markdown_template.tpl
data/pipelines/kaggle_sourcing/: README.md  final_merged_demo.csv  merge_meta_sources.py  run_merge.slurm
data/pipelines/prompts/: agent_prompt_e2b.md  agent_prompt_llm.md  code_interpreter_system_prompt.md  code_interpreter_user_prompt.md  data_exploration_prompt.md
data/pipelines/utils/: jupyter_utils.py  qwen3_formatter_utils.py  sandbox.py
finetuning/: README.md  pyproject.toml  train.ipynb  train.py
finetuning/deepspeed/: train.py
finetuning/recipes/Qwen3-4B/: sft.yaml
finetuning/recipes/accelerate_configs/: zero2.yaml
finetuning/slurm/: train.slurm
finetuning/templates/: qwen3_chat_non_thinking_template.jinja
